--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,56 +1,49 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Build and Deploy
 
 on:
   push:
     branches: [ master ]
-
-jobs:
+    
+jobs: 
   build:
-
+    name: build ⛏⛏
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-    - run: npm run build --if-present
-    - name: Archive build
-      if: success()
-      uses: actions/upload-artifact@v1
-      with:
-        name: deploy_dist
-        path: dist
-    - name: Archive code coverage result
-      if: success()
-      uses: actions/upload-artifact@v1
-      with:
-        name: deploy_coverage
-        path: dist
+      - name: Checkout Repository
+        uses: actions/checkout@master
+      - name: Install Dependency
+        run: npm i
+      - name: Build Project
+        run: npm run build
+      - name: Archive Product Artifacts
+        uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist
+          
   deploy:
-    runs-on: ubuntu-latest
+    name: deploy
     needs: build
+    runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Download build
-        uses: actions/download-artifact@v1
-        with:
-          name: deploy_dist
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: deploy_dist/deploy-demo
+       - name: Checkout Repository
+         uses: actions/checkout@master
+       - name: Download Product Artifacts
+         uses: actions/download-artifact@master
+         with:
+          name: dist
+          path: dist
+       - name: Sync file to ftp
+         uses: SamKrikland/FTP-Deploy-Action@4.0.0
+         with:
+          server: ftp.iamratul.com
+          username: demo-ftp@iamratul.com
+          password: ${{ secrets.FTP_PASSWORD}}
+       
+    
+    
