--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,12 +6,12 @@ name: Build and Deploy
 on:
   push:
     branches: [ master ]
-    
-jobs: 
+
+jobs:
   build:
     name: build ⛏⛏
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@master
@@ -24,12 +24,12 @@ jobs:
         with:
           name: dist
           path: dist
-          
+
   deploy:
     name: deploy
     needs: build
     runs-on: ubuntu-latest
-    
+
     steps:
        - name: Checkout Repository
          uses: actions/checkout@master
@@ -44,7 +44,8 @@ jobs:
           server: ftp.iamratul.com
           username: demo-ftp@iamratul.com
           password: ${{ secrets.FTP_PASSWORD}}
-          local-dir: ./dist/
-       
-    
-    
+          local-dir: ./dist/docker-practice/
+          server-dir: public_html/
+
+
+
