--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docker-practice",
   "version": "0.0.0",
+  "homepage": ".",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
